# gitea-cli

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  release.yml
docs/superpowers/plans/: 2026-04-12-issue-domain-phase-1.md  2026-04-12-issue-domain-phase-2.md  2026-04-13-actions-write-implementation.md  2026-04-13-branch-write-implementation.md  2026-04-13-pull-request-write-implementation.md  2026-04-13-release-tag-write-implementation.md
docs/superpowers/specs/: 2026-04-12-issue-domain-alignment-design.md  2026-04-13-actions-write-design.md  2026-04-13-branch-write-design.md  2026-04-13-pull-request-write-design.md  2026-04-13-release-tag-write-design.md
src/: app.rs  cli.rs  config.rs  lib.rs  main.rs  mcp.rs  output.rs
tests/: cli_metadata.rs  command_plans.rs  config.rs  mcp_protocol.rs  output_normalization.rs  workflow_release.rs  workflow_targets.rs
